js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-if-no-new-call-expression.js
DONOTEVALUATE
(
)
;
if
(
true
)
{
new
import
(
'
'
)
;
}
